--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,11 +1,26 @@
 .custom-dropdown {
     background-color: transparent !important;
-    color: black;    
+    color: black;
 }
+
 .custom-dropdown:hover {
     color: white !important;
     background-color: #6c757d !important;
 }
+
 .dropdown:hover .dropdown-menu {
     display: block;
+}
+
+.custom-file-button input[type=file]::-webkit-file-upload-button {
+    display: none;
+}
+
+.custom-file-button input[type=file]::file-selector-button {
+    display: none;
+}
+
+.custom-file-button:hover label {
+    background-color: #dde0e3;
+    cursor: pointer;
 }
